# visualreasoning

./: .gitignore  BEFORE-ARC.md  CVR.md  RE-ARC.md  README.md  check_rearc_data.py  create_cvr_datasets.ipynb  download_wandb_data.py  experiment.py  experiments.md  inference.py  pyproject.toml  requirements.txt  training.py
BEFOREARC/: BEFORE-ARC.md
CVR/: README.md  __init__.py  create_cvr_datasets.ipynb  generalization_tasks.py  generate_cvr_data.py  generate_dataset.py  tasks.py  utils.py
RE-ARC/: README.md  create_rearc_datasets.ipynb  generators.py  main.py
REARC/: README.md  REARC.md  __init__.py  create_rearc_datasets.ipynb  generate_rearc_data.py  tasks_generated.txt
configs/: base.yaml  data.yaml  experiment.yaml  general.yaml  inference.yaml  model.yaml  model_shared.yaml  sweep.yaml  sweep_beforearc.yaml  sweep_cvr.yaml  sweep_rearc.yaml  training.yaml  wandb.yaml
data/: __init__.py  beforearc_data.py  cvr_data.py  cvr_vision_data.py  data_base.py  rearc_data.py  rearc_seq2seq_data.py  rearc_vision_data.py
jobs/: beforearc_commands.txt  beforearc_commands_each_experiment.txt  beforearc_commands_grid_sizes.txt  beforearc_commands_model_sizes.txt  beforearc_commands_per_experiment._all_es.txt  beforearc_commands_per_experiment_all_es.txt  beforearc_commands_per_study_es_model.txt  beforearc_commands_per_study_model.txt  generate_cvr_data.sh  generate_rearc_data.sh  run_experiment_nohup.sh
models/: __init__.py  beforearc_model.py  cvr_model.py  cvr_vision_model.py  rearc_model.py  rearc_seq2seq_model.py  rearc_vision_model.py
networks/: __init__.py  my_vit.py  transformers.py  vanilla_vits.py
slurm/: 01_bugfix_compen_runs.sh  02_grid_sizes.sh  (+15 more)
(+80 files in other folders)
